NetBSD Problem Report #50748

From www@NetBSD.org  Tue Feb  2 10:35:47 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 72D687A215
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  2 Feb 2016 10:35:47 +0000 (UTC)
Message-Id: <20160202103546.91CD37ACB5@mollari.NetBSD.org>
Date: Tue,  2 Feb 2016 10:35:46 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/i386/stand/boot/boot2.c:270]: (style) Array index 'n' is used before limits check.
X-Send-Pr-Version: www-1.0

>Number:         50748
>Category:       port-i386
>Synopsis:       src/sys/arch/i386/stand/boot/boot2.c:270]: (style) Array index 'n' is used before limits check.
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    port-i386-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Feb 02 10:40:00 +0000 2016
>Closed-Date:    Wed Feb 03 08:18:23 +0000 2016
>Last-Modified:  Wed Feb 03 08:18:23 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160131
>Organization:
>Environment:
>Description:

Source code is

        for (n = 0; bootcfg_info.banner[n]
            && n < BOOTCFG_MAXBANNER; n++)

Maybe better code

        for (n = 0; (n < BOOTCFG_MAXBANNER) 
                     && bootcfg_info.banner[n]
            ; n++)

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50748 CVS commit: src/sys/arch/i386/stand/boot
Date: Wed, 3 Feb 2016 00:27:53 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Wed Feb  3 05:27:53 UTC 2016

 Modified Files:
 	src/sys/arch/i386/stand/boot: boot2.c

 Log Message:
 PR/50748: David Binderman: check bounds before dereference


 To generate a diff of this commit:
 cvs rdiff -u -r1.65 -r1.66 src/sys/arch/i386/stand/boot/boot2.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Wed, 03 Feb 2016 08:18:23 +0000
State-Changed-Why:
Fixed by christos, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.