PR/50748: David Binderman: check bounds before dereference